Buttons for presenter evaluation steps created, inform consent response, close evaluation route and function created, edition mode in false when presenter module
